<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Soft1714080902209_Main">

    <Button
        android:id="@+id/Main_Reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:text="@string/Main_Reg"
        app:layout_constraintBaseline_toBaselineOf="@+id/Main_Login"
        app:layout_constraintEnd_toStartOf="@+id/Main_Login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Main_Text_PW" />

    <TextView
        android:id="@+id/Main_Text_PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Main_Text_PW"
        app:layout_constraintBaseline_toBaselineOf="@+id/Passcode_TextEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Main_Text_HR"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="154dp"
        android:text="@string/Main_Text_HR"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Main_Text_PW"
        app:layout_constraintEnd_toEndOf="@+id/UserName_TextEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/UserName_TextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/Main_Text_PW"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Passcode_TextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/Main_Text_PW"
        app:layout_constraintTop_toBottomOf="@+id/UserName_TextEdit" />

    <Button
        android:id="@+id/Main_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/Main_Login"
        app:layout_constraintEnd_toEndOf="@+id/Passcode_TextEdit"
        app:layout_constraintTop_toBottomOf="@+id/Passcode_TextEdit" />

    <TextView
        android:id="@+id/Main_Text_UM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_Text_UM"
        app:layout_constraintBaseline_toBaselineOf="@+id/UserName_TextEdit"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>