<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Soft1714080902209_AddInfo">

    <EditText
        android:id="@+id/add_Sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="396dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/Add_Age"
        app:layout_constraintTop_toBottomOf="@+id/Add_Age" />

    <EditText
        android:id="@+id/add_TEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="396dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/Add_Sex"
        app:layout_constraintTop_toBottomOf="@+id/Add_Sex" />

    <EditText
        android:id="@+id/add_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="396dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/Add_Name"
        app:layout_constraintTop_toBottomOf="@+id/Add_Name" />

    <EditText
        android:id="@+id/add_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="428dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/main_Text_UM"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_Text_UM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:text="@string/Add_Age"
        app:layout_constraintBaseline_toBaselineOf="@+id/Add_Age"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_Text_UM3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:text="@string/Add_Sex"
        app:layout_constraintBaseline_toBaselineOf="@+id/Add_Sex"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_Text_UM4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="9dp"
        android:text="@string/Add_TEL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Add_TEL" />

    <TextView
        android:id="@+id/main_Text_UM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:text="@string/Add_Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/Add_Name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Add_TEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/Add_Sex"
        app:layout_constraintTop_toBottomOf="@+id/Add_Sex" />

    <EditText
        android:id="@+id/Add_Sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/Add_Age"
        app:layout_constraintTop_toBottomOf="@+id/Add_Age" />

    <EditText
        android:id="@+id/Add_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/Add_Name"
        app:layout_constraintTop_toBottomOf="@+id/Add_Name" />

    <EditText
        android:id="@+id/Add_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/main_Text_UM"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Add_SaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:text="@string/Add_SaveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_TEL" />
</android.support.constraint.ConstraintLayout>