<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/Reg_RegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:layout_marginBottom="176dp"
        android:text="@string/Main_Reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Main_Text_PW" />

    <TextView
        android:id="@+id/Main_Text_PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Main_Text_PW"
        app:layout_constraintBaseline_toBaselineOf="@+id/Passcode_TextEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Main_Text_HR"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="154dp"
        android:text="注册"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Main_Text_PW"
        app:layout_constraintEnd_toEndOf="@+id/UserName_TextEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UserName_TextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Passcode_TextEdit"
        app:layout_constraintStart_toEndOf="@+id/Main_Text_PW" />

    <EditText
        android:id="@+id/Passcode_TextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="317dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/Main_Text_PW"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Main_Text_PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Main_Text_UM"
        app:layout_constraintBaseline_toBaselineOf="@+id/UserName_TextEdit"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>